[package]
name = "sasa"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_os = "ios"))'.lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "ios")'.lib]
crate-type = ["staticlib"]

[features]
cpal = ["dep:cpal"]
oboe = ["dep:oboe"]


[dependencies]
anyhow = "1.0.68"
cpal = { version = "0.15.3", optional = true }
ringbuf = "0.3.2"
symphonia = { version = "0.5.2", features = ["mp3", "aac"] }
thiserror = "1.0.38"

oboe = { version = "0.6.1", optional = true, features = ["shared-stdcxx"] }
atomic_float = "1.1.0"

[dev-dependencies]
kira = "0.7.1"
